# EmailTool

./: .gitignore  LICENSE  NOTICE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
scripts/: serve-dist.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accounts.rs  commands.rs  extractor.rs  lib.rs  main.rs  monitor.rs  rules.rs  state.rs  storage.rs  types.rs  vault.rs
src/lib/: api.ts  extractor.test.ts  extractor.ts  importer.test.ts  importer.ts  provider.ts  rules.test.ts  rules.ts  types.ts
