[package]
name = "email-auth-manager"
version = "0.1.0"
description = "Desktop authentication mail manager"
authors = ["EmailTool"]
edition = "2021"

[lib]
name = "email_auth_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "email-auth-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-stronghold = "2"
thiserror = "2"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
